--- a/index.html
+++ b/index.html
@@ -60,11 +60,14 @@
         background-color: #ff6189;
     }
     @media screen and (max-width: 600px) {
-  th, td {
+  /* th, td {
     display: block;
     width: 100%;
-  }
-  
+  } */
+  .table-container table{
+    width: 50%;
+    border-collapse: collapse
+  }  
   th {
     text-align: center;
   }
