--- a/index.html
+++ b/index.html
@@ -165,6 +165,39 @@
     }
   </style>
   <style>
+    /* Default font size for the banner */
+    .banner-info {
+      font-size: 25px;
+    }
+  
+    .banner-desc {
+      font-size: 34px;
+    }
+  
+    /* Adjust font size for smaller screens */
+    @media only screen and (max-width: 768px) {
+      .banner-info {
+        font-size: 20px; /* Adjust as needed */
+      }
+  
+      .banner-desc {
+        font-size: 25px; /* Adjust as needed */
+      }
+    }
+  
+    /* Adjust font size for even smaller screens like mobile */
+    @media only screen and (max-width: 480px) {
+      .banner-info {
+        font-size: 29px; /* Adjust as needed */
+      }
+  
+      .banner-desc {
+        font-size: 20px; /* Adjust as needed */
+      }
+    }
+  </style>
+  
+  <style>
     /* Custom styling for the table */
     .table-container {
         width: 100%;
@@ -307,7 +340,7 @@
                 </div> -->
               <p class="banner-info">K.D.K College of Engineering, Nagpur,Maharashtra, India</p>
               <!-- 22-23, Mar 2024 -  -->
-              <p class="banner-info" style="font-size: 25px; margin-bottom: 5px; margin-top: 0px;">(An Autonoums Institute)<br><div style="font-size: 10px;">Organizes</div></p>
+              <p class="banner-info" style=" margin-bottom: 5px; margin-top: 0px;">(An Autonoums Institute)<br><div style="font-size: 10px;">Organizes</div></p>
               <h2 class="head-title">Two-Days International Conference</h2>
               <h2 class="head-title" style="margin-top: -20px;">ON</h2>
               <p class="banner-desc">
