--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
   <title>CISD - 2024</title>
   <link rel="icon" type="image/x-icon" href="assets/img/kdklogo2.png">
   <!-- Bootstrap CSS -->
@@ -25,6 +28,7 @@
     width: 1142px;
     margin: 0 auto;
   }
+  
   
   .ag-courses-component body {
     background-color: #000;
@@ -440,6 +444,7 @@
               <p class="banner-info banner-info-col">K.D.K College of Engineering,</p>
               <p class="banner-info banner-info-col">Nagpur,Maharashtra, India</p>
               <!-- 22-23, Mar 2024 -  -->
+              <p class="banner-info" style=" margin-bottom: 15px; margin-top: 0px;">NAAC and NBA Accredited</p>
               <p class="banner-info" style=" margin-bottom: 5px; margin-top: 0px;">(An Autonoums Institute)<br><div style="font-size: 10px;">Organizes</div></p>
               <h2 class="head-title">Two-Days International Conference</h2>
               <h2 class="head-title" style="margin-top: -20px;">ON</h2>
@@ -778,6 +783,64 @@
         </div>
       </div>
     <!-- </section> -->
+    <section id="team2" class="section-padding text-center">
+      <div class="container" style="margin-bottom: 10px;">
+        <div class="row">
+          <div class="col-12">
+            <div class="section-title-header text-center">
+              <h2 class="section-title wow fadeInUp" data-wow-delay="0.2s">In Association With</h2>
+              <!-- <p class="wow fadeInDown" data-wow-delay="0.2s">Lorem ipsum dolor sit amet, in quodsi vulputate pro. Ius
+                illum vocent mediocritatem an <br> cule dicta iriure at phaedrum.</p> -->
+            </div>
+          </div>
+        </div>
+        </div>
+        <div class="container ">
+          <!-- <h3 class="p-4" align="center">Trusted by the world's most inovative teams</h3> -->
+          <div class="row" align="center">
+              <div class="col-xs-6 col-md-3">
+                  <a href="#" class="thumbnail">
+                    <!-- assets/img/Association_of_Consulting_Civil_Engineers-logo.jpg   -->
+                    <img src="assets/img/Association_of_Consulting_Civil_Engineers-logo-removebg-preview.png" alt="...">
+                  </a>
+              </div>
+              <div class="col-xs-6 col-md-3">
+                  <a href="#" class="thumbnail">
+                    <!-- assets/img/logo_Shri_lanka (1).jpg -->
+                      <img src="assets/img/logo_Shri_lanka__1_-removebg-preview.png" alt="...">
+                  </a>
+              </div>
+              <div class="col-xs-6 col-md-3">
+                  <a href="#" class="thumbnail">
+                    <!-- assets/img/Institution_of_Engineers_(India)_Logo.svg.png -->
+                      <img src="assets/img/Institution_of_Engineers_(India)_Logo.svg.png" alt="...">
+                  </a>
+              </div>
+              <div class="col-xs-6 col-md-3">
+                  <a href="#" class="thumbnail">
+                    <!-- assets/img/(IWWA).jpg -->
+                      <img src="assets/img/_IWWA_-removebg-preview.png" alt="...">
+                  </a>
+              </div>
+          </div>
+          <div class="row" align="center">
+              <div class="col-md-6 col-md-4 p-4">
+                  <a href="#" class="thumbnail">
+                    <!-- assets/img/(ASCE)..png -->
+                      <img src="assets/img/_ASCE_.-removebg-preview.png" alt="..." align="center">
+                  </a>
+              </div>
+              <div class="col-md-6 col-md-4s">
+                  <a href="#" class="thumbnail">
+                    <!-- assets/img/ICI-Hod-CIVIL-new.jpg -->
+                      <img src="assets/img/ICI-Hod-CIVIL-new-removebg-preview.png" alt="..." align="center">
+                  </a>
+              </div>
+  
+  
+          </div>
+      </div>
+    </section>
     <section id="team1" class="section-padding text-center">
       <div class="container">
         <div class="row">
