--- a/index.html
+++ b/index.html
@@ -432,24 +432,19 @@
     <!-- Navbar End -->
 
     <!-- Hero Area Start -->
-    <div id="hero-area" class="hero-area-bg">
+    <!-- <div id="hero-area" class="hero-area-bg">
       <div class="overlay"></div>
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-9 col-sm-12">
             <div class="contents text-center">
-              <!-- <div class="icon">
-                  <i class="lni-mic"></i>
-                </div> -->
               <p class="banner-info banner-info-col">K.D.K College of Engineering,</p>
               <p class="banner-info banner-info-col">Nagpur,Maharashtra, India</p>
-              <!-- 22-23, Mar 2024 -  -->
               <p class="banner-info" style=" margin-bottom: 15px; margin-top: 0px;">NAAC and NBA Accredited</p>
               <p class="banner-info" style=" margin-bottom: 5px; margin-top: 0px;">(An Autonoums Institute)<br><div style="font-size: 10px;">Organizes</div></p>
               <h2 class="head-title">Two-Days International Conference</h2>
               <h2 class="head-title" style="margin-top: -20px;">ON</h2>
               <p class="banner-desc banner-info-col">
-                <!-- style="font-size: 34px; white-space: nowrap;" -->
                 Critical Infrastructure & Sustainable Development
               </p>
               <p class="banner-desc" style="font-size: 19px; margin-top: -18px;"> (Hybrid Mode)</p>
@@ -460,7 +455,47 @@
           </div>
         </div>
       </div>
+    </div> -->
+    <div id="hero-area" class="hero-area-bg">
+      <div class="overlay"></div>
+      <div class="container">
+        
+        <div class="row justify-content-center " >
+          <!-- Left Image Column -->
+          <div class="col-lg-3 col-md-6 col-sm-12">
+            <img src="assets/img/nba.png" class="img-fluid mx-auto d-block" alt="Left Image" style="margin-top: 140px;">
+          </div>
+          <!-- Text Content Column -->
+          <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="contents text-center">
+              <!-- <div class="icon">
+                  <i class="lni-mic"></i>
+                </div> -->
+              <p class="banner-info banner-info-col">K.D.K College of Engineering,</p>
+              <p class="banner-info banner-info-col">Nagpur, Maharashtra, India</p>
+              <!-- 22-23, Mar 2024 -  -->
+              <p class="banner-info" style="margin-bottom: 15px; margin-top: 0px;">NAAC and NBA Accredited</p>
+              <p class="banner-info" style="margin-bottom: 5px; margin-top: 0px;">(An Autonomous Institute)<br><div style="font-size: 10px;">Organizes</div></p>
+              <h2 class="head-title">Two-Days International Conference</h2>
+              <h2 class="head-title" style="margin-top: -20px;">ON</h2>
+              <p class="banner-desc banner-info-col">
+                <!-- style="font-size: 34px; white-space: nowrap;" -->
+                Critical Infrastructure & Sustainable Development
+              </p>
+              <p class="banner-desc" style="font-size: 19px; margin-top: -18px;"> (Hybrid Mode)</p>
+              <div class="banner-btn">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxGzHSesMXkP6CKTe9zPDQMDMokKesQEInJBFAwrTPHX0WOA/viewform" target="_blank" class="btn btn-common">Register Now</a>
+              </div>
+            </div>
+          </div>
+          <!-- Right Image Column -->
+          <div class="col-lg-3 col-md-6 col-sm-12">
+            <img src="assets/img/naac.jfif" class="img-fluid mx-auto d-block" alt="Right Image" style="margin-top: 140px;">
+          </div>
+        </div>
+      </div>
     </div>
+    
     <!-- Hero Area End -->
 
   </header>
