--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active carousel-item-left">
-                    <img class="d-block w-100" src="./assets/img/DSC_1207.JPG" alt="First slide">
+                    <img class="d-block w-100" src="./assets/img/past_01.JPG" alt="First slide">
                     <div class="carousel-caption d-none d-md-block">
                       <!-- <h4 style="color: #000000;">
                         <i class="fa fa-map-marker"></i>
@@ -654,7 +654,7 @@
                   </div>
                   
                   <div class="carousel-item carousel-item-next carousel-item-left">
-                    <img class="d-block w-100" src="./assets/img/DSC_1203.JPG" alt="Second slide">
+                    <img class="d-block w-100" src="./assets/img/past_02.JPG" alt="Second slide">
                     <div class="carousel-caption d-none d-md-block">
                       <!-- <h4 style="color: #000000;">
                         <i class="fa fa-map-marker"></i>
@@ -663,7 +663,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="./assets/img/DSC_0795.JPG" alt="Third slide">
+                    <img class="d-block w-100" src="./assets/img/past_03.JPG" alt="Third slide">
                     <div class="carousel-caption d-none d-md-block">
                       <!-- <h4 style="color: #000000;">
                         <i class="fa fa-map-marker"></i>
@@ -672,7 +672,98 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="./assets/img/ETSE-2.JPG" alt="Fourth slide">
+                    <img class="d-block w-100" src="./assets/img/past_04.JPG" alt="Fourth slide">
+                    <div class="carousel-caption d-none d-md-block">
+                      <!-- <h4 style="color: #000000;">
+                        <i class="fa fa-map-marker"></i>
+                        Kerala,Kerala, India
+                      </h4> -->
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/img/past_05.JPG" alt="Fourth slide">
+                    <div class="carousel-caption d-none d-md-block">
+                      <!-- <h4 style="color: #000000;">
+                        <i class="fa fa-map-marker"></i>
+                        Kerala,Kerala, India
+                      </h4> -->
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/img/past_06.JPG" alt="Fourth slide">
+                    <div class="carousel-caption d-none d-md-block">
+                      <!-- <h4 style="color: #000000;">
+                        <i class="fa fa-map-marker"></i>
+                        Kerala,Kerala, India
+                      </h4> -->
+                    </div>
+                  </div>
+
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/img/past_07.JPG" alt="Fourth slide">
+                    <div class="carousel-caption d-none d-md-block">
+                      <!-- <h4 style="color: #000000;">
+                        <i class="fa fa-map-marker"></i>
+                        Kerala,Kerala, India
+                      </h4> -->
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/img/past_08.JPG" alt="Fourth slide">
+                    <div class="carousel-caption d-none d-md-block">
+                      <!-- <h4 style="color: #000000;">
+                        <i class="fa fa-map-marker"></i>
+                        Kerala,Kerala, India
+                      </h4> -->
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/img/past_09.png" alt="Fourth slide">
+                    <div class="carousel-caption d-none d-md-block">
+                      <!-- <h4 style="color: #000000;">
+                        <i class="fa fa-map-marker"></i>
+                        Kerala,Kerala, India
+                      </h4> -->
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/img/past_010.png" alt="Fourth slide">
+                    <div class="carousel-caption d-none d-md-block">
+                      <!-- <h4 style="color: #000000;">
+                        <i class="fa fa-map-marker"></i>
+                        Kerala,Kerala, India
+                      </h4> -->
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/img/past_011.png" alt="Fourth slide">
+                    <div class="carousel-caption d-none d-md-block">
+                      <!-- <h4 style="color: #000000;">
+                        <i class="fa fa-map-marker"></i>
+                        Kerala,Kerala, India
+                      </h4> -->
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/img/past_012.png"Fourth slide">
+                    <div class="carousel-caption d-none d-md-block">
+                      <!-- <h4 style="color: #000000;">
+                        <i class="fa fa-map-marker"></i>
+                        Kerala,Kerala, India
+                      </h4> -->
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/img/past_013.png" alt="Fourth slide">
+                    <div class="carousel-caption d-none d-md-block">
+                      <!-- <h4 style="color: #000000;">
+                        <i class="fa fa-map-marker"></i>
+                        Kerala,Kerala, India
+                      </h4> -->
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/img/past_014.jpg" alt="Fourth slide">
                     <div class="carousel-caption d-none d-md-block">
                       <!-- <h4 style="color: #000000;">
                         <i class="fa fa-map-marker"></i>
